...
            "state" : "translated",
            "value" : "Перейти к посту"
          }
        }
      }
    },
    "Grid" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Raster"
...
            "state" : "translated",
            "value" : "Искать в"
          }
        }
      }
    },
    "Loop" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Wiederholen"
...
            "state" : "translated",
            "value" : "Шаблон"
          }
        }
      }
    },
    "Pause" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pause"
...
            "state" : "translated",
            "value" : "Заполнитель"
          }
        }
      }
    },
    "Play" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abspielen"
...
            "state" : "translated",
            "value" : "Только с сажей"
          }
        }
      }
    },
    "Save" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sichern"
...
            "state" : "translated",
            "value" : "Видео"
          }
        }
      }
    },
    "View options" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ansichtsoptionen"
...
